2004-12-22 Vangelis Rokas <vrokas AT otenet.gr>

	* applied a previous patch from Raphael Neider that wasn't included
	in the previous commits, which fixes infinite loops within jumptable
	improvements,
	* made some fixes that previous patches introduced

2004-12-21 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/gen.c (pic16_aopGet): applied fix from Raphael Neider
	that fixes an issue with AOP_PCODE asmop's offset,
	* (pic16_popCopyReg): update instance field too,
	* (mov2w): modified to pic16_mov2w because it conflicts with mov2w
	function of pic port,
	* (genCmp, genAnd, genAssign),
	* src/pic16/genarith.c (genAddLit): some fixes from Raphael Neider,

2004-12-20 Vangelis Rokas <vrokas AT otenet.gr>

	* src/SDCCast.c (gatherAutoInit): allow pic16 to emit static
	variables initial values to idata section,
	* src/SDCCicode.c (geniCodeCall): patch from ### to fix unreferenced
	variables in some functions. This utilizes parmBytes field of iCode
	structure to hold the offset of the variable in stack. (might be
	able to use the stack field too?)
	* applied patch from Raphael Neider # ### , # ###
	* src/pic16/glue.c (pic16emitRegularMap): fix to print static
	variable initial values in idata section,
	* src/pic16/ralloc.c (pic16_allocDirReg): don't allocate register
	for static variables with initial value
	* src/device/lib/pic16/libsdcc/float/ulong2fs.c (__ulong2fs):
	applied fix in while loop from Raphael Neider.

2004-12-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genCpl): fixed bit=~(char/bit) bugs, added warning
	* src/ds390/main.c (_ds390_regparm): don't pass bit params in registers
	* src/ds390/ralloc.c (serialRegAssign): spill bits
	* src/mcs51/gen.c (genCpl): fixed bit=~(char) bugs, added warning
	* support/Util/SDCCerr.c,
	* support/Util/SDCCerr.h: added warning W_COMPLEMENT for using bit=~(bit)
	* support/regression/tests/bitvars.c: added tests for bitwise complement(~)